--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "peerDependencies": {
     "@egjs/hammerjs": "^2.0.0",
     "component-emitter": "^1.3.0",
+    "date-fns": "^2.16.1",
     "keycharm": "^0.3.0",
     "moment": "^2.24.0",
     "propagating-hammerjs": "^1.4.0",
@@ -87,6 +88,7 @@
     "core-js": "3.6.5",
     "core-js-pure": "3.6.5",
     "cpy-cli": "3.1.1",
+    "date-fns": "^2.16.1",
     "emitter-component": "1.1.1",
     "eslint": "7.10.0",
     "gh-pages": "3.1.0",
