--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "jsdom-global": "3.0.2",
     "keycharm": "0.3.1",
     "mocha": "8.1.3",
+    "mockery": "^2.1.0",
     "moment": "2.29.0",
     "nyc": "15.1.0",
     "opencollective": "1.0.3",
