--- a/package.json
+++ b/package.json
@@ -97,7 +97,6 @@
     "jsdom-global": "3.0.2",
     "keycharm": "0.3.1",
     "mocha": "8.1.3",
-    "mockdate": "^3.0.2",
     "mockery": "^2.1.0",
     "moment": "2.29.0",
     "nyc": "15.1.0",
@@ -118,6 +117,7 @@
     "rollup-plugin-terser": "7.0.2",
     "rollup-plugin-typescript2": "0.27.3",
     "semantic-release": "17.1.2",
+    "sinon": "^9.2.1",
     "snap-shot-it": "7.9.3",
     "uglify-js": "3.11.1",
     "uglifycss": "0.0.29",
